feat: 添加 @sinclair/typebox 到 pkg

--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -44,7 +44,8 @@
     "scripts": "build/**/*.js",
     "assets": [
       "assets/**/*",
-      "package.json"
+      "package.json",
+      "node_modules/@sinclair/typebox/**/*"
     ],
     "targets": [
       "node18-linux-x64",
