--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -66,10 +66,10 @@
     "lodash": "4.17.21",
     "long": "5.2.3",
     "mime-types": "2.1.35",
-    "next": "14.0.3",
+    "next": "14.1.0",
     "next-compose-plugins": "2.2.1",
     "next-connect": "1.0.0",
-    "nextjs-cors": "^2.1.2",
+    "nextjs-cors": "2.2.0",
     "node-ssh": "13.1.0",
     "nookies": "2.5.2",
     "nprogress": "0.2.0",
@@ -85,7 +85,7 @@
     "superjson": "2.2.1",
     "swagger-ui-react": "5.10.3",
     "trpc-openapi": "1.2.0",
-    "ws": "8.13.0",
+    "ws": "8.16.0",
     "xterm": "5.2.1",
     "xterm-addon-fit": "0.7.0",
     "zod": "3.22.4",
@@ -93,7 +93,7 @@
     "replace-in-file": "7.1.0"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "14.0.3",
+    "@next/bundle-analyzer": "14.1.0",
     "@testing-library/jest-dom": "6.1.4",
     "@testing-library/react": "14.1.2",
     "@types/busboy": "1.5.3",
@@ -107,7 +107,7 @@
     "@types/styled-components": "5.1.34",
     "@types/swagger-ui-react": "4.18.3",
     "@types/url-join": "4.0.3",
-    "@types/ws": "8.5.9",
+    "@types/ws": "8.5.10",
     "@types/shell-quote": "1.7.4",
     "fs-extra": "11.1.1",
     "jest-environment-jsdom": "29.7.0",
