--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "devenv:stop": "docker compose --env-file dev/.env.dev -f dev/docker-compose.dev.yml down",
     "test": "turbo run test",
     "test:ci": "pnpm run -r test --ci --coverage --runInBand",
-    "prepare": "node -e \"try { require('husky').install() } catch (e) {if (e.code !== 'MODULE_NOT_FOUND' && !e.message.startsWith('.git')) throw e}\"",
+    "prepare": "node -e \"try { import('husky').then((d) => console.log(d.default())) } catch (e) {if (e.code !== 'MODULE_NOT_FOUND' && !e.message.startsWith('.git')) throw e}\"",
     "lint": "turbo run lint lint:ts",
     "lint:ts": "eslint --cache --ext .tsx,.ts,.js .",
     "ci:version": "node scripts/version.mjs",
