--- a/turbo.json
+++ b/turbo.json
@@ -61,7 +61,7 @@
     },
     "@scow/protos#build": {
       "dependsOn": [
-        "^@scow/protos#generate"
+        "generate"
       ],
       "inputs": [
         "generated/**"
@@ -81,7 +81,7 @@
     },
     "@scow/scheduler-adapter-protos#build": {
       "dependsOn": [
-        "^@scow/scheduler-adapter-protos#generate"
+        "generate"
       ],
       "inputs": [
         "generated/**"
