fix renovate json

--- a/renovate.json
+++ b/renovate.json
@@ -31,9 +31,13 @@
         "@mdx-js/react",
         "react",
         "react-dom",
-        "@types/react",
+        "@types/react"
+      ],
+      "enabled": false
+    },
+    {
+      "matchPackagePatterns": [
         "pino",
-        "turbo",
         "@uiw/react-codemirror"
       ],
       "enabled": false
