--- a/apps/audit-server/package.json
+++ b/apps/audit-server/package.json
@@ -33,6 +33,7 @@
     "@mikro-orm/seeder": "6.0.5",
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
+    "@scow/lib-server": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
     "@scow/utils": "workspace:*",
