--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -37,10 +37,11 @@
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
     "@grpc/grpc-js": "1.9.14",
-    "@mikro-orm/cli": "5.9.4",
-    "@mikro-orm/core": "5.9.4",
-    "@mikro-orm/migrations": "5.9.4",
-    "@mikro-orm/mysql": "5.9.4",
+    "@mikro-orm/cli": "6.0.5",
+    "@mikro-orm/core": "6.0.5",
+    "@mikro-orm/migrations": "6.0.5",
+    "@mikro-orm/mysql": "6.0.5",
+    "@mikro-orm/seeder": "6.0.5",
     "@scow/config": "workspace:*",
     "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
@@ -109,7 +110,7 @@
     "@types/url-join": "4.0.3",
     "@types/ws": "8.5.10",
     "@types/shell-quote": "1.7.4",
-    "fs-extra": "11.1.1",
+    "fs-extra": "11.2.0",
     "jest-environment-jsdom": "29.7.0",
     "nextjs-node-loader": "1.1.5-alpha.0",
     "node-mocks-http": "1.13.0",
