--- a/libs/server/package.json
+++ b/libs/server/package.json
@@ -20,7 +20,8 @@
     "@ddadaal/tsgrpc-common": "0.2.5",
     "@grpc/grpc-js": "1.9.14",
     "nookies": "2.5.2",
-    "@scow/config": "workspace:*"
+    "@scow/config": "workspace:*",
+    "dayjs": "1.11.10"
   },
   "devDependencies": {
     "@ddadaal/tsgrpc-server": "0.19.5",
