--- a/libs/server/package.json
+++ b/libs/server/package.json
@@ -22,6 +22,7 @@
     "@grpc/grpc-js": "1.9.14",
     "nookies": "2.5.2",
     "@scow/config": "workspace:*",
+    "dayjs": "1.11.10",
     "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/utils": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
