--- a/apps/cli/assets/init-full/config/clusters/hpc01.yaml
+++ b/apps/cli/assets/init-full/config/clusters/hpc01.yaml
@@ -24,9 +24,10 @@ adapterUrl: localhost:8972
 #   # 是否在这个机器上自动配置nginx
 #   autoSetupNginx: true
 
-# 集群在HPC或者Ai中是否启用，默认只在HPC集群启用
-enabledIn:
-  # 高性能计算
-  hpc: true
-  # 人工智能
-  ai: false
+# 集群在HPC或是否启用，默认为true
+hpc:
+  enabled: true
+
+# 集群在AI或是否启用，默认为false
+ai:
+  enabled: false
