feat(config): 新增集群区分AI功能和HPC功能配置 (#1148)
###改动

集群配置文件新增配置项，配置为true时 才会在对应的门户系统展示集群选项 
```yaml
hpc:
  enabled: true

ai:
  enabled: false
```

AI  跳转  由门户 改为 SCOW HPC


![b473480d-8392-4108-a37d-84e1d27fecf0](https://github.com/PKUHPC/SCOW/assets/130351655/8a5a67d5-5253-428f-8b13-41dad0b031b0)


管理系统  跳转 门户改为SCOW HPC 跳转AI 为 SCOW AI


![cd0ab7ac-f5bc-4bb9-92ad-1e6f8ff67ee8](https://github.com/PKUHPC/SCOW/assets/130351655/4864336a-1055-40ae-9e4d-e8d99a6dfc3e)

--- a/apps/cli/assets/init-full/config/clusters/hpc01.yaml
+++ b/apps/cli/assets/init-full/config/clusters/hpc01.yaml
@@ -23,3 +23,11 @@ adapterUrl: localhost:8972
 
 #   # 是否在这个机器上自动配置nginx
 #   autoSetupNginx: true
+
+# 集群在HPC或是否启用，默认为true
+hpc:
+  enabled: true
+
+# 集群在AI或是否启用，默认为false
+ai:
+  enabled: false
