--- a/turbo.json
+++ b/turbo.json
@@ -52,7 +52,7 @@
     },
     "@scow/protos#generate": {
       "inputs": [
-        "node_modules/@scow/grpc-api/**/*.proto",
+        "../../../protos/**/*.proto",
         "buf.gen.yaml"
       ],
       "outputs": [
