--- a/apps/portal-server/package.json
+++ b/apps/portal-server/package.json
@@ -20,19 +20,22 @@
   "license": "Mulan PSL v2",
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
+    "@connectrpc/connect": "^1.4.0",
+    "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
     "@ddadaal/tsgrpc-server": "0.19.5",
-    "@ddadaal/tsgrpc-client": "0.17.7",
     "@grpc/grpc-js": "1.9.14",
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
+    "@scow/lib-scheduler-adapter": "workspace:*",
+    "@scow/lib-scowd": "workspace:*",
     "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/protos": "workspace:*",
-    "@scow/scheduler-adapter-protos": "workspace:*",
-    "@scow/lib-scheduler-adapter": "workspace:*",
-    "@scow/utils": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
+    "@scow/scheduler-adapter-protos": "workspace:*",
+    "@scow/scowd-protos": "workspace:*",
+    "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.13",
     "dayjs": "1.11.10",
     "dotenv": "16.4.1",
