feat: ai 新增以 shell 的方式进入容器的功能

--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -37,6 +37,7 @@
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
     "@grpc/grpc-js": "1.9.14",
+    "@kubernetes/client-node": "^0.20.0",
     "@mikro-orm/cli": "6.0.5",
     "@mikro-orm/core": "6.0.5",
     "@mikro-orm/migrations": "6.0.5",
@@ -48,12 +49,12 @@
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
+    "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/lib-web": "workspace:*",
-    "@scow/lib-server": "workspace:*",
+    "@scow/rich-error-model": "workspace:*",
     "@scow/scheduler-adapter-protos": "workspace:*",
     "@scow/utils": "workspace:*",
-    "@scow/rich-error-model": "workspace:*",
     "@sinclair/typebox": "0.32.12",
     "@tanstack/react-query": "4.36.1",
     "@trpc/client": "10.45.0",
@@ -81,6 +82,8 @@
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
     "react-typed-i18n": "2.3.0",
+    "replace-in-file": "7.1.0",
+    "shell-quote": "1.8.1",
     "simstate": "3.0.1",
     "styled-components": "6.1.8",
     "superjson": "2.2.1",
@@ -89,9 +92,7 @@
     "ws": "8.16.0",
     "xterm": "5.2.1",
     "xterm-addon-fit": "0.7.0",
-    "zod": "3.22.4",
-    "shell-quote": "1.8.1",
-    "replace-in-file": "7.1.0"
+    "zod": "3.22.4"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.1.0",
@@ -105,11 +106,11 @@
     "@types/nprogress": "0.2.3",
     "@types/react": "18.2.48",
     "@types/react-dom": "18.2.15",
+    "@types/shell-quote": "1.7.4",
     "@types/styled-components": "5.1.34",
     "@types/swagger-ui-react": "4.18.3",
     "@types/url-join": "4.0.3",
     "@types/ws": "8.5.10",
-    "@types/shell-quote": "1.7.4",
     "fs-extra": "11.2.0",
     "jest-environment-jsdom": "29.7.0",
     "nextjs-node-loader": "1.1.5-alpha.0",
