disable react-query update

--- a/renovate.json
+++ b/renovate.json
@@ -45,7 +45,8 @@
     {
       "matchPackagePatterns": [
         "ldapjs",
-        "@types/ldapjs"
+        "@types/ldapjs",
+        "@tanstack/react-query"
       ],
       "enabled": false
     }
