--- a/libs/protos/scheduler-adapter/package.json
+++ b/libs/protos/scheduler-adapter/package.json
@@ -5,7 +5,7 @@
   "main": "build/index.js",
   "private": true,
   "scripts": {
-    "generate": "rimraf generated && buf generate --template buf.gen.yaml https://github.com/PKUHPC/scow-scheduler-adapter-interface.git#branch=feat-ai-optimize",
+    "generate": "rimraf generated && buf generate --template buf.gen.yaml https://github.com/PKUHPC/scow-scheduler-adapter-interface.git#branch=scow-ai-test-job",
     "build": "rimraf build && tsc"
   },
   "files": [
