--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -21,15 +21,16 @@
   "license": "Mulan PSL v2",
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
+    "@ddadaal/tsgrpc-client": "0.17.7",
     "@fastify/error": "3.4.1",
     "@fastify/formbody": "7.4.0",
     "@fastify/static": "7.0.2",
     "@fastify/view": "9.0.0",
-    "liquidjs": "10.10.2",
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
+    "@scow/protos": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.20",
     "asn1": "0.2.6",
@@ -38,14 +39,15 @@
     "fastify-plugin": "4.5.1",
     "ioredis": "5.3.2",
     "ldapjs": "2.3.3",
+    "liquidjs": "10.10.2",
     "nanoid": "5.0.6",
-    "svg-captcha": "1.4.0",
-    "pino-pretty": "10.3.1",
-    "pino": "8.16.2",
     "nodemailer": "6.9.13",
+    "pino": "8.16.2",
+    "pino-pretty": "10.3.1",
     "qrcode": "1.5.3",
+    "react-typed-i18n": "2.3.0",
     "speakeasy": "2.0.0",
-    "react-typed-i18n": "2.3.0"
+    "svg-captcha": "1.4.0"
   },
   "devDependencies": {
     "@types/asn1": "0.2.4",
