--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -21,6 +21,10 @@
   "license": "Mulan PSL v2",
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
+    "@alicloud/dysmsapi20170525": "2.0.24",
+    "@alicloud/openapi-client": "0.4.6",
+    "@alicloud/tea-console": "1.0.0",
+    "@alicloud/tea-util": "1.4.7",
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@fastify/error": "3.4.1",
     "@fastify/formbody": "7.4.0",
