--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -88,8 +88,8 @@
     "swagger-ui-react": "5.13.0",
     "trpc-openapi": "1.2.0",
     "ws": "8.16.0",
-    "xterm": "5.3.0",
-    "xterm-addon-fit": "0.8.0",
+    "@xterm/xterm": "5.5.0",
+    "@xterm/addon-fit": "0.10.0",
     "zod": "3.22.4",
     "shell-quote": "1.8.1",
     "replace-in-file": "7.1.0"
