--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -30,7 +30,7 @@ jobs:
         run: pnpm run --filter docs... build
         env:
           GIT_PLATFORM: github
-          CR_URL: ghcr.io/pkuhpc/scow
+          CR_URL: ghcr.io/${{ github.event.repository.name }}
           BASE_PATH: /${{ github.event.repository.name }}/
 
       - name: Deploy to GitHub Pages
