--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -171,8 +171,8 @@ jobs:
           tags: ${{ steps.meta.outputs.tags }}
           file: docker/Dockerfile.${{ matrix.file }}
           labels: ${{ steps.meta.outputs.labels }}
-          # only build arm64 in master commits
-          platforms: linux/amd64${{ github.ref_type == 'tag' && ',linux/arm64' || '' }}
+          # only build arm64 in tag commits or branches with name starting with `arm-`
+          platforms: linux/amd64${{ (github.ref_type == 'tag' || startsWith(github.ref_name, 'arm-')) && ',linux/arm64' || '' }}
 
 
   release:
