chore: 只在主仓库中创建tag

--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -11,6 +11,7 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 jobs:
   tag-if-needed:
     runs-on: ubuntu-latest
+    if: github.event.repository.name == 'PKUHPC/SCOW'
     steps:
       - uses: actions/checkout@v4
         with:
