fix(ci): 只有当要运行测试或者发布的时候才运行prepareDev

--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -61,6 +61,7 @@ jobs:
         run: docker ps
 
       - name: Prepare dev libs and code
+        if: vars.RUN_TESTS == 'true' || vars.RUN_RELEASE == 'true'
         run: pnpm prepareDev
 
       - name: Wait for ports
