--- a/.github/workflows/pr-cleanup.yaml
+++ b/.github/workflows/pr-cleanup.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: dawidd6/action-delete-branch@v3
         with:
           github_token: ${{ secrets.SCOW_DEPLOYMENT_PAT }}
-          owner: ${{ secrets.VAGRANT_REPO_OWNER }}
-          repository: ${{ secrets.VAGRANT_REPO_NAME }}
+          owner: ${{ vars.VAGRANT_REPO_OWNER }}
+          repository: ${{ vars.VAGRANT_REPO_NAME }}
           branches: ${{ github.event.number }}/merge
           soft_fail: true
