--- a/.github/workflows/side-projects.yaml
+++ b/.github/workflows/side-projects.yaml
@@ -15,6 +15,7 @@ jobs:
   scow-vagrant:
     name: Update scow-vagrant
     runs-on: ubuntu-latest
+    if: vars.PUSH_VAGRANT == 'true'
     steps:
       - uses: actions/checkout@v4
 
