--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -36,6 +36,8 @@ jobs:
           ref: ${{ github.event.pull_request.head.sha }}
 
       - uses: pnpm/action-setup@v3.0.0
+        with:
+            version: 9.x
 
       - uses: actions/setup-node@v4
         with:
