--- a/docker/Dockerfile.docs
+++ b/docker/Dockerfile.docs
@@ -16,6 +16,8 @@ RUN apk update && apk add libc6-compat python3 make gcc g++ git
 RUN corepack enable
 
 WORKDIR /app
+
+COPY package.json .
 COPY pnpm-lock.yaml .
 COPY patches ./patches
 
