--- a/docker/Dockerfile.scow
+++ b/docker/Dockerfile.scow
@@ -20,6 +20,8 @@ RUN apk add libc6-compat python3 make gcc g++ curl git
 RUN corepack enable
 
 WORKDIR /app
+
+COPY package.json .
 COPY pnpm-lock.yaml .
 COPY patches ./patches
 
