--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Wait for ports
         if: vars.RUN_TESTS == 'true'
-        uses: ifaxity/wait-on-action@main
+        uses: iFaxity/wait-on-action@main
         with:
           log: true
           verbose: true
