--- a/.github/workflows/api-breaking.yaml
+++ b/.github/workflows/api-breaking.yaml
@@ -13,21 +13,9 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-        with:
-          # changelog generation requires full history
-          # to track each changelog file to its submission commit
-          fetch-depth: 0
-          ref: ${{ github.event.pull_request.head.sha }}
 
-      - uses: pnpm/action-setup@v3.0.0
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20.x
-          cache: pnpm
-
-      - name: Install dependencies
-        run: pnpm i --frozen-lockfile
+      - uses: bufbuild/buf-setup-action@v1
 
       - name: Check API Compatibility
-        run: pnpm api:breaking
+        working-directory: protos
+        run: buf breaking --against '../.git#branch=master,subdir=protos'
