--- a/apps/portal-server/package.json
+++ b/apps/portal-server/package.json
@@ -20,7 +20,7 @@
   "license": "Mulan PSL v2",
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
-    "@connectrpc/connect": "^1.4.0",
+    "@connectrpc/connect": "1.4.0",
     "@ddadaal/tsgrpc-common": "0.2.5",
     "@ddadaal/tsgrpc-server": "0.19.5",
     "@ddadaal/tsgrpc-client": "0.17.7",
