fix:修改gateway的Nginx配置，ai和auth的接口前加v1

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -39,6 +39,16 @@ server {
     include includes/websocket;
   }
 
+# ai中将/v1/ai/xxx，重写成/ai/v1/xxx并代理到/ai/v1/xxx
+  location ${BASE_PATH}v1${AI_PATH} {
+    rewrite ^${BASE_PATH}v1${AI_PATH}/(.*) ${AI_PATH}/v1/$1 break;
+    set $ai_path_url ${AI_PATH_INTERNAL_URL};
+    proxy_pass $ai_path_url;
+
+    include includes/headers;
+    include includes/websocket;
+  }
+
   location ${BASE_PATH}${VNC_PATH} {
     proxy_pass ${NOVNC_INTERNAL_URL};
 
@@ -51,6 +61,14 @@ server {
   }
 
   location ~ ^${BASE_PATH}/auth/public/(.*) {
+    set $auth ${AUTH_URL};
+    proxy_pass $auth/public/$1?$args;
+
+    include includes/headers;
+  }
+
+  #在auth中public接口也加上前缀v1
+  location ~ ^${BASE_PATH}/v1/auth/public/(.*) {
     set $auth ${AUTH_URL};
     proxy_pass $auth/public/$1?$args;
 
