feat(portal): portal headerUI更新

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
     "trpc"
   ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": true
+    "source.fixAll.eslint": "explicit"
   },
   "eslint.validate": [
     "javascript",
@@ -18,4 +18,5 @@
     "typescript",
     "typescriptreact"
   ],
+  "references.preferredLocation": "view",
 }
