--- a/.github/workflows/api-breaking.yaml
+++ b/.github/workflows/api-breaking.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   check-api-breaking-changes:
     name: Check SCOW API Breaking Changes
-    runs-on: ubuntu-latest
+    runs-on: ${{ vars.ACTION_RUNNER_LABEL }}
 
     steps:
       - uses: actions/checkout@v4
