--- a/.github/workflows/docs.yaml
+++ b/.github/workflows/docs.yaml
@@ -14,7 +14,7 @@ concurrency:
 jobs:
   deploy-docs:
     name: Deploy to GitHub Pages
-    runs-on: ubuntu-latest
+    runs-on: ${{ vars.ACTION_RUNNER_LABEL }}
     steps:
       - uses: actions/checkout@v4
       - uses: pnpm/action-setup@v3.0.0
