--- a/.github/workflows/lint-pr-content.yaml
+++ b/.github/workflows/lint-pr-content.yaml
@@ -10,7 +10,7 @@ on:
 jobs:
 
   lint-title:
-    runs-on: ubuntu-latest
+    runs-on: ${{ vars.ACTION_RUNNER_LABEL }}
     steps:
       - uses: amannn/action-semantic-pull-request@v5
         env:
