ci: 修复一些问题 (#1258)
1. 可以通过仓库的ACTION_RUNNER_LABEL设置修改ci的运行actions的runner
2. 修复tag-release没有正常运行的问题

--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -10,8 +10,8 @@ concurrency: ${{ github.workflow }}-${{ github.ref }}
 
 jobs:
   tag-if-needed:
-    runs-on: ubuntu-latest
-    if: github.event.repository.name == 'PKUHPC/SCOW'
+    runs-on: ${{ vars.ACTION_RUNNER_LABEL }}
+    if: github.event.repository.full_name == 'PKUHPC/SCOW'
     steps:
       - uses: actions/checkout@v4
         with:
