--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,7 +10,7 @@
     "trpc"
   ],
   "editor.codeActionsOnSave": {
-    "source.fixAll.eslint": "explicit"
+    "source.fixAll.eslint": true
   },
   "eslint.validate": [
     "javascript",
@@ -18,5 +18,4 @@
     "typescript",
     "typescriptreact"
   ],
-  "references.preferredLocation": "view",
 }
