--- a/.github/workflows/send-release-test-notification.yaml
+++ b/.github/workflows/send-release-test-notification.yaml
@@ -24,14 +24,14 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v2
 
-    - name: Print Deployment Details
+    - name: Print Notification Details
       run: |
         echo "Deployment Time: ${{ github.event.inputs.time }}"
         echo "Version: ${{ github.event.inputs.version }}"
         echo "Release Level: ${{ github.event.inputs.level }}"
         echo "Feature Freeze Period: ${{ github.event.inputs.feature_freeze }}"
 
-    - name: Send Deployment Request
+    - name: Send Notification Request
       run: |
         curl -X POST http://47.96.27.236:8080/version \
         -H "Content-Type: application/json" \
