--- a/libs/protos/scowd/package.json
+++ b/libs/protos/scowd/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0",
   "description": "",
   "main": "index.js",
+  "private": true,
   "scripts": {
     "generate": "rimraf generated && buf generate --template buf.gen.yaml ./protos/api",
     "build": "rimraf build && tsc"
