--- a/apps/auth/package.json
+++ b/apps/auth/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "build": "rimraf build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
-    "dev": "node --watch -r ts-node/register -r tsconfig-paths/register src/index.ts",
+    "dev": "node -r ts-node/register -r tsconfig-paths/register --watch src/index.ts",
     "serve": "node build/index.js",
     "test": "jest"
   },
