--- a/apps/mis-server/package.json
+++ b/apps/mis-server/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "main": "build/index.js",
   "scripts": {
-    "dev": "dotenv -e env/.env.dev -- node --watch -r ts-node/register -r tsconfig-paths/register src/index.ts",
+    "dev": "dotenv -e env/.env.dev -- node -r ts-node/register -r tsconfig-paths/register --watch src/index.ts",
     "build": "rimraf build && tsc -p tsconfig.build.json && tsc-alias -p tsconfig.build.json",
     "serve": "node build/index.js",
     "test": "jest --forceExit",
