--- a/apps/mis-web/package.json
+++ b/apps/mis-web/package.json
@@ -23,6 +23,7 @@
   "license": "Mulan PSL v2",
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
+    "@ant-design/cssinjs": "1.19.1",
     "@ant-design/icons": "5.3.6",
     "@ddadaal/next-typed-api-routes-runtime": "0.8.2",
     "@ddadaal/tsgrpc-client": "0.17.7",
@@ -32,15 +33,18 @@
     "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
+    "@scow/lib-operation-log": "workspace:*",
     "@scow/lib-web": "workspace:*",
     "@scow/protos": "workspace:*",
-    "@scow/utils": "workspace:*",
-    "@scow/lib-operation-log": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
+    "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.20",
     "antd": "5.16.0",
+    "csv-stringify": "6.4.6",
     "dayjs": "1.11.10",
     "google-protobuf": "3.21.2",
+    "http-proxy": "1.18.1",
+    "iconv-lite": "^0.6.3",
     "less": "4.2.0",
     "mime-types": "2.1.35",
     "next": "14.1.4",
@@ -51,15 +55,12 @@
     "react-async": "10.0.1",
     "react-dom": "18.2.0",
     "react-is": "18.2.0",
+    "react-typed-i18n": "2.3.0",
     "recharts": "^2.7.3",
     "simstate": "3.0.1",
     "styled-components": "6.1.8",
     "tslib": "2.6.2",
-    "typescript": "5.4.3",
-    "http-proxy": "1.18.1",
-    "@ant-design/cssinjs": "1.19.1",
-    "react-typed-i18n": "2.3.0",
-    "csv-stringify": "6.4.6"
+    "typescript": "5.4.3"
   },
   "devDependencies": {
     "@ddadaal/next-typed-api-routes-cli": "0.9.1",
