feat: 将服务地址改为 secret

--- a/.github/workflows/send-release-test-notification.yaml
+++ b/.github/workflows/send-release-test-notification.yaml
@@ -24,7 +24,7 @@ jobs:
 
     - name: Send Notification Request
       run: |
-        curl -X POST http://47.96.27.236:8080/version \
+        curl -X POST ${{ secrets.RELEASE_SERVICE_ADDRESS }}/version \
         -H "Content-Type: application/json" \
         -H "Authorization: Bearer ${{ secrets.RELEASE_API_KEY }}" \
         -d '{
