--- a/.github/workflows/tag-release.yaml
+++ b/.github/workflows/tag-release.yaml
@@ -31,6 +31,6 @@ jobs:
     steps:
     - name: Send Notification Request
       run: |
-        curl -X POST http://47.96.27.236:8080/version/success \
+        curl -X POST ${{ secrets.RELEASE_SERVICE_ADDRESS }}/version/success \
         -H "Content-Type: application/json" \
         -H "Authorization: Bearer ${{ secrets.RELEASE_API_KEY }}"
