--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -222,3 +222,11 @@ jobs:
           files: |
             release/scow-cli/cli-x64
             release/scow-cli/cli-arm64
+
+            send-version-success:
+
+      - name: Send Notification Request
+        run: |
+          curl -X POST ${{ secrets.RELEASE_SERVICE_ADDRESS }}/version/success \
+          -H "Content-Type: application/json" \
+          -H "Authorization: Bearer ${{ secrets.RELEASE_API_KEY }}"
