fix: 删除 json 末尾的逗号

--- a/.github/workflows/send-release-test-notification.yaml
+++ b/.github/workflows/send-release-test-notification.yaml
@@ -28,5 +28,5 @@ jobs:
         -H "Content-Type: application/json" \
         -H "Authorization: Bearer ${{ secrets.RELEASE_API_KEY }}" \
         -d '{
-          "time": "${{ github.event.inputs.time }}",
+          "time": "${{ github.event.inputs.time }}"
         }'
