--- a/apps/portal-server/config/shellAudit.yaml
+++ b/apps/portal-server/config/shellAudit.yaml
@@ -1,4 +1,9 @@
-auditShell:
-  true
-url:
+auditService:
+  shellAudit:
+    enabled: true
+  appAudit:
+    enabled: true
+  remoteDesktopAudit:
+    enabled: false
+auditServiceUrl:
   172.27.156.9:50051
