--- a/dev/ldap/Dockerfile
+++ b/dev/ldap/Dockerfile
@@ -13,6 +13,11 @@ FROM centos:7
 WORKDIR /ldap
 COPY dev/ldap/provider.sh .
 
+# https://serverfault.com/a/1161847
+RUN sed -i s/mirror.centos.org/vault.centos.org/g /etc/yum.repos.d/*.repo
+RUN sed -i s/^#.*baseurl=http/baseurl=http/g /etc/yum.repos.d/*.repo
+RUN sed -i s/^mirrorlist=http/#mirrorlist=http/g /etc/yum.repos.d/*.repo
+
 RUN ulimit -n 10240;./provider.sh docker
 
 VOLUME [ "/var/lib/ldap" ]
