--- a/dev/ldap/Dockerfile
+++ b/dev/ldap/Dockerfile
@@ -14,9 +14,8 @@ WORKDIR /ldap
 COPY dev/ldap/provider.sh .
 
 # https://serverfault.com/a/1161847
-RUN sed -i s/mirror.centos.org/vault.centos.org/g /etc/yum.repos.d/*.repo
-RUN sed -i s/^#.*baseurl=http/baseurl=http/g /etc/yum.repos.d/*.repo
-RUN sed -i s/^mirrorlist=http/#mirrorlist=http/g /etc/yum.repos.d/*.repo
+RUN sed -i s/mirrorlist/#mirrorlist/g /etc/yum.repos.d/CentOS-*
+RUN sed -i s|#baseurl=http://mirror.centos.org|baseurl=http://vault.centos.org|g /etc/yum.repos.d/CentOS-*
 
 RUN ulimit -n 10240;./provider.sh docker
 
