--- a/apps/mis-web/package.json
+++ b/apps/mis-web/package.json
@@ -36,6 +36,7 @@
     "@scow/lib-web": "workspace:*",
     "@scow/protos": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
+    "@scow/asynchub": "workspace:*",
     "@sinclair/typebox": "0.32.34",
     "antd": "5.18.3",
     "dayjs": "1.11.11",
