--- a/docker/Dockerfile.docs
+++ b/docker/Dockerfile.docs
@@ -37,7 +37,7 @@ COPY --from=pruner /app/out/json/ .
 RUN pnpm i --offline --frozen-lockfile
 
 COPY --from=pruner /app/out/full/ .
-COPY tsconfig.json .eslintrc.js turbo.json ./
+COPY tsconfig.json turbo.json ./
 COPY libs/tsconfig.json ./libs/
 COPY protos ./protos
 
