--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -66,6 +66,7 @@
     "next-compose-plugins": "2.2.1",
     "nookies": "2.5.2",
     "nprogress": "0.2.0",
+    "p-limit": "6.1.0",
     "react": "18.3.1",
     "react-async": "10.0.1",
     "react-dom": "18.3.1",
