--- a/libs/protos/ai-scheduler-adapter/package.json
+++ b/libs/protos/ai-scheduler-adapter/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "@scow/scheduler-adapter-protos",
-  "version": "1.3.1",
+  "name": "@scow/ai-scheduler-adapter-protos",
+  "version": "1.0.0",
   "description": "",
   "main": "build/index.js",
   "private": true,
   "scripts": {
-    "generate": "rimraf generated && buf generate --template buf.gen.yaml https://github.com/PKUHPC/scow-scheduler-adapter-interface.git#branch=v1.5.0",
+    "generate": "rimraf generated && buf generate --template buf.gen.yaml https://github.com/PKUHPC/scow-scheduler-adapter-interface.git#branch=feat-ai-release",
     "build": "rimraf build && tsc"
   },
   "files": [
