--- a/libs/protos/scowd/package.json
+++ b/libs/protos/scowd/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@scow/notification-protos",
+  "name": "@scow/scowd-protos",
   "version": "0.2.0",
   "description": "",
   "main": "index.js",
