do not sync if not enabled

--- a/apps/mis-server/config/mis.yaml
+++ b/apps/mis-server/config/mis.yaml
@@ -5,4 +5,7 @@ db:
   password: mysqlrootpassword
   dbName: scow_server_${JEST_WORKER_ID}
 
+periodicSyncUserAccountBlockStatus:
+  enabled: false
+
 
