--- a/libs/protos/scow-resources/buf.gen.yaml
+++ b/libs/protos/scow-resources/buf.gen.yaml
@@ -6,3 +6,16 @@ plugins:
   - plugin: connect-es
     opt: target=ts
     out: generated
+  - plugin: ts-proto
+    path: node_modules/ts-proto/protoc-gen-ts_proto
+    strategy: all
+    out: generated
+    opt:
+      - unrecognizedEnum=false
+      - useDate=string
+      - useExactTypes=false
+      - oneof=unions
+      - esModuleInterop=true
+      - useOptionals=messages
+      - outputServices=grpc-js
+
