--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -45,6 +45,7 @@
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
+    "@scow/lib-scow-resources": "workspace:*",
     "@scow/lib-web": "workspace:*",
     "@scow/protos": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
