--- a/libs/scow-resources/package.json
+++ b/libs/scow-resources/package.json
@@ -1,8 +1,8 @@
 {
     "name": "@scow/lib-scow-resources",
     "version": "1.0.0",
-    "description": "",
-    "main": "index.js",
+    "description": "scow-resources",
+    "main": "build/index.js",
     "private": true,
     "scripts": {
       "dev": "tsc -p tsconfig.build.json && (concurrently \"tsc -p tsconfig.build.json -w\" \"tsc-alias -p tsconfig.build.json -w\")",
@@ -18,11 +18,18 @@
     "repository": "https://github.com/PKUHPC/SCOW",
     "keywords": [],
     "dependencies": {
+      "@ddadaal/tsgrpc-common": "0.2.5",
+      "@ddadaal/tsgrpc-client": "0.17.7",
       "@bufbuild/protobuf": "1.8.0",
       "@connectrpc/connect": "1.4.0",
       "@connectrpc/connect-node": "1.4.0",
       "@grpc/grpc-js": "1.10.9",
-      "@scow/scow-resources-protos": "workspace:*"
+      "@scow/scow-resources-protos": "workspace:*",
+      "@scow/config": "workspace:*",
+      "ts-log": "2.2.5"
+    },
+    "devDependencies": {
+      "@ddadaal/tsgrpc-server": "0.19.5"
     },
     "volta": {
         "extends": "../../package.json"
