--- a/apps/mis-server/package.json
+++ b/apps/mis-server/package.json
@@ -43,6 +43,7 @@
     "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/protos": "workspace:*",
+    "@scow/scow-resources-protos": "workspace:*",
     "@scow/scheduler-adapter-protos": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.34",
