feat(mis&auth): 删除用户报错优化,认证系统修改用户shell为nologin

--- a/apps/cli/assets/init/config/auth.yml
+++ b/apps/cli/assets/init/config/auth.yml
@@ -14,6 +14,7 @@ ldap:
     uid: uid
     name: cn
     mail: mail
+    loginShell: loginShell
 
   addUser:
     userBase: "ou=People,ou=hpc,o=pku"
