--- a/apps/cli/assets/init-full/config/auth.yml
+++ b/apps/cli/assets/init-full/config/auth.yml
@@ -41,6 +41,8 @@ authType: ssh
 
 #     # LDAP中对应用户的邮箱的属性名。可不填。此字段只用于在创建用户的时候把邮件信息填入LDAP。
 #     # mail: mail
+#     # LDAP中对应用户在 Unix/Linux 系统上的默认shel。当前仅用于判断用户是否被禁止登录。
+#      # loginShell: loginShell
 
 #   # 添加用户的相关配置。可不填，不填的话SCOW不支持创建用户。
 #   addUser:
