--- a/deploy/vagrant/scow/scow-deployment/config/auth.yml
+++ b/deploy/vagrant/scow/scow-deployment/config/auth.yml
@@ -36,6 +36,8 @@ ldap:
     # LDAP中对应用户的邮箱的属性名。可不填。此字段只用于在创建用户的时候把邮件信息填入LDAP。
     mail: mail
 
+    # LDAP中对应用户在 Unix/Linux 系统上的默认shel。当前仅用于判断用户是否被禁止登录。
+    loginShell: loginShell
   # 添加用户的相关配置。必填
   addUser:
     # 增加用户节点时，把用户增加到哪个节点下
