--- a/apps/mis-server/config/mis.yaml
+++ b/apps/mis-server/config/mis.yaml
@@ -7,6 +7,7 @@ db:
 
 periodicSyncUserAccountBlockStatus:
   enabled: false
+
 # 为保证测试用例通过，消费精度和最小消费金额改为原有值
-chargePrecision: 3
-minChargeAmount: 0
+jobChargeDecimalPrecision: 3
+jobMinCharge: 0
